# dobble-gen

./: .gitignore  Makefile  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml
src/dobble_fun/: generator.py
src/dobble_gen/: __main__.py  card.py  check.py  cli.py  config.py  generator.py  symbol.py
tests/: test_combinations.py  test_symbol_per_cards.py
